# comp2501-final-project

./: FormattingGuide.md  LICENSE  README.md
GameFiles/: CMakeLists.txt  audio_manager.cpp  audio_manager.h  buyable_item.cpp  buyable_item.h  collectible_game_object.cpp  collectible_game_object.h  defs.h  derived_enemy_objects.cpp  derived_enemy_objects.h  enemy_game_object.cpp  enemy_game_object.h  enemy_spawn.cpp  enemy_spawn.h  file_utils.cpp  file_utils.h  game.cpp  game.h  game_object.cpp  game_object.h  geometry.h  hud.cpp  hud.h  main.cpp  particle_fragment_shader.glsl  particle_fragment_shader_2.glsl  particle_system.cpp  particle_system.h  particle_vertex_shader.glsl  particle_vertex_shader_2.glsl  particles.cpp  particles.h  player_game_object.cpp  player_game_object.h  power_ups.cpp  power_ups.h  projectile_game_object.cpp  projectile_game_object.h  readme.txt  shader.cpp  (+13 more)
GameFiles/audio/: bg_music.txt  bgm_irotirot.txt  collect.txt  enemy_hit.txt  enemy_shoot.txt  explosion.txt  game_over.txt  game_start.txt  player_hit.txt  player_shoot.txt  power_up_loop.txt  purchase.txt  rifle_shoot.txt  smg_shoot.txt  sniper_shoot.txt  wave_complete.txt  win_game.txt
GameFiles/textures/: background.txt  bb_icon.txt  bullet.txt  bullet1.txt  bullet_boost.txt  buyable_border.txt  buyable_rifle.txt  buyable_smg.txt  buyable_sniper.txt  celestial_augment.txt  chaser_ship.txt  collectible.txt  destroyer.txt  double_points.txt  enemy_spawn.txt  explosion.txt  font.txt  kamikaze_explosion.txt  link.txt  nitro_infuse.txt  orb.txt  regen_coating.txt  rifle_bullet.txt  sawblade.txt  smg_bullet.txt  sniper_bullet.txt  stars.txt  vignette.txt  win_screen.txt
